--- a/client/src/public/stylesheets/bot/_header.scss
+++ b/client/src/public/stylesheets/bot/_header.scss
@@ -19,8 +19,8 @@
   justify-content: space-evenly;
   align-items: center;
 
-  width: 130px;
-  height: 56px;
+  width: 100px;
+  height: 54px;
   border-radius: 30px;
   -moz-border-radius: 30px;
   -webkit-border-radius: 30px;
@@ -31,7 +31,7 @@
 
   position: fixed;
   z-index: 1010;
-  
+
   @include xxs {
     right: 2rem;
     bottom: 2rem;
@@ -50,7 +50,9 @@
 
 .open-bot-icon-text {
   color: white;
-  font-size: 2rem;
+  @include sm {
+    font-size: 1.8rem;
+  }
   // margin: 8px 0 0 8px;
 }
 
@@ -213,8 +215,7 @@ button.refresh-bot:active {
 @media (max-width: 2000px) and (min-width: 600px) {
   .open-bot-icon-circle {
     position: fixed;
-    right: 4rem;
-    // top: 2.9em;
+    right: 1.75rem;
     top: 3.5rem;
   }
 }
